--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ body{
 	color:#fff;
 	-webkit-font-smoothing:antialiased;
 	-moz-osx-font-smoothing:grayscale;
+	background-color: #000000;
 }
 
 a{
