--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,35 +496,33 @@ a:focus{
 	margin-top:50px;
 }
 .time-box{
-	width:150px;
-	height:150px;
+	width:175px;
+	height:175px;
 	display:table;
-	border:1px solid #fff;
+	border:3px solid #fff;
 	margin:50px auto;
+	background: #000000;
+	opacity: 0.45;
 
+	-webkit-border-radius:50%;
+	   -moz-border-radius:50%;
+	    -ms-border-radius:50%;
+	     -o-border-radius:50%;
+	        border-radius:50%;
+/*
 	-webkit-border-radius:15px;
 	   -moz-border-radius:15px;
 	    -ms-border-radius:15px;
 	     -o-border-radius:15px;
 	        border-radius:15px;
 
-	-webkit-transform:rotate(45deg);
-	   -moz-transform:rotate(45deg);
-	    -ms-transform:rotate(45deg);
-	     -o-transform:rotate(45deg);
-	        transform:rotate(45deg);
+*/
 }
 .time-box-inner{
-	width:150px;
-	height:150px;
+	width:175px;
+	height:175px;
 	display:table;
 	text-align:center;
-
-	-webkit-transform:rotate(-45deg);
-	   -moz-transform:rotate(-45deg);
-	    -ms-transform:rotate(-45deg);
-	     -o-transform:rotate(-45deg);
-	        transform:rotate(-45deg);
 }
 .time-number{
 	font-size:65px;
